# gem

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
archive/desktop/: CMakeLists.txt  deskact.c  deskapp.h  deskinf.c  deskobj.c  deskrsrc.c  desksupp.c  deskwin.h  dos.h  gembind.c  gemdos.c  gsxdefs.h  legacy_main.c  machine.h  optimize.c  taddr.h
archive/desktop/icons/: iconhi.h  obdefs.h
archive/desktop/resource/: desktop.dfn  desktop.rsh
docs/: GEMIX_LINUX.md
docs/manuals/: AES_ALL.BUK  VDI_ALL.TXT
docs/notes/: BITMAPS.md  CALC_CLOCK_GAP_ANALYSIS.md  DEMO23_COMPATIBILITY_GAPS.md  FONTS.md  GAP_ANALYSIS.md  LINKS.md  STOUT.md
include/: gem.h
include/fat12/: fat12.h
include/gem/: aes.h  gem.h  os.h  portab.h  vdi.h
include/msa/: msa.h
include/platform/: hid.h  os.h  raster.h
include/prg/: prg.h
lib/msa/: CMakeLists.txt  msa.c
lib/platform/linux/: CMakeLists.txt  hid.c  os.c  raster.c
lib/platform/rasta/: CMakeLists.txt  hid.c  os.c  raster.c
lib/prg/: CMakeLists.txt  prg.c
samples/: CMakeLists.txt
samples/demo1/: CMakeLists.txt  main.c
samples/demo10/: main.c
samples/demo11/: main.c
samples/demo12/: main.c
samples/demo13/: main.c
samples/demo14/: main.c
samples/demo15/: main.c
samples/demo16/: main.c
samples/demo2/: CMakeLists.txt  main.c
samples/demo20/: CMakeLists.txt  main.c
samples/demo21/: CMakeLists.txt  main.c
samples/demo22/: CMakeLists.txt  main.c
samples/demo23/: CMakeLists.txt  main.c
samples/demo24/: CMakeLists.txt  main.c
samples/demo25/: CMakeLists.txt  main.c
samples/demo26/: CMakeLists.txt  main.c
samples/demo27/: CMakeLists.txt  demo27.h  demo27.rsc  main.c  make_rsc.c
samples/demo28/: CMakeLists.txt  main.c
samples/demo29/: CMakeLists.txt  main.c
samples/demo3/: CMakeLists.txt  main.c
samples/demo30/: CMakeLists.txt  main.c
samples/demo31/: CMakeLists.txt  main.c
samples/demo32/: CMakeLists.txt  main.c
samples/demo33/: CMakeLists.txt  main.c
samples/demo4/: main.c
samples/demo5/: main.c
samples/demo6/: main.c
samples/demo7/: main.c
samples/demo8/: main.c
samples/demo9/: main.c
samples/manual/: manual_demo.c  manual_demo.h
samples/menu_demo/: CMakeLists.txt  main.c
samples/multi/: CMakeLists.txt  main.c
samples/terminal/: CMakeLists.txt  main.c
src/aes/: CMakeLists.txt  _aes.c  _aes.h  _menu.c  _window.c  aes.c  alert_icons.c  alert_icons.h  event.c  file_selector.c  menu.c  resource.c  window.c
src/apps/: CMakeLists.txt
src/apps/calc/: CMakeLists.txt  _calc.c  calc.c  calc.h  calcif.c  cryslib.h  machine.h  main.c  obdefs.h  taddr.h
src/apps/clock/: CMakeLists.txt  _clock.c  clock.c  clock.h  clok.c  clok.h  crysbind.h  main.c  portab.h
src/apps/gemscape/: CMakeLists.txt  _gemscape.c  gemscape.c  gemscape.h
src/apps/maestro/: CMakeLists.txt  _maestro.c  maestro.c  maestro.h
src/desktop/: CMakeLists.txt  README.md  bind.h  deskapp.c  deskbind.h  deskdir.c  deskfpd.c  deskfpd.h  deskfun.c  deskglob.c  deskgraf.c  deskgsx.c  deskif.c  deskins.c  deskpro.c  desktop.c  desktop.h  desktop_assets.c  desktop_assets.h  deskwin.c  funcdef.h  gembind.h  gemdos_host.c  hcsmall.c  hostshim.c  infodef.h  main.c  obdefs.h
src/desktop/icons/: compicon.c  dos.c  iconlist.h  iconlo.h  machine.h
src/desktop/resource/: desktop.h
src/gem/: CMakeLists.txt  _gem.h  client.c  client_objc.c
src/gemd/: CMakeLists.txt  main.c
src/rcs/: CMakeLists.txt  dosbind.c  dosbind.h  funcdef.h  gembind.c  gembind.h  gemovlc.c  gsxdefs.h  hcsmall.c  machine.h  main.c  obdefs.h  portab.h  rcs.h  rcsalert.c  rcsdata.c  rcsdefs.h  rcsedit.c  rcsext.h  rcsfiles.c  rcsiedit.c  rcsiext.h  rcsifile.c  rcsiinit.c  rcsimain.c  rcsinit.c  rcsintf.c  rcskeybd.h  rcslib.c  rcsload.c  rcslow.h  rcsmain.c  rcsmenu.c  rcsobjs.c  rcsread.c  rcstrees.c  rcsvdi.c  rcswrite.c  treeaddr.h  vdibind.h  (+1 more)
src/resources/icons/: IAGENRDH.ICN  IAGENRMH.ICN  IDGENRDH.ICN  IDGENRMH.ICN  IDOUTPDH.ICN  IDSPRDDH.ICN  IGFDSKDH.ICN  IGFDSKMH.ICN  IGFOLDDH.ICN  IGFOLDMH.ICN  IGHDSKDH.ICN  IGTRSHDH.ICN  IGTRSHMH.ICN
src/vdi/: CMakeLists.txt  _core.c  _cursor.c  _fonts.c  _internal.h  _state.h  _surface.c  _vdi.c  _vdi.h  alpha.c  input.c  misc.c  primitives.c  raster.c  text.c  vdi.c  workstation.c
tests/: CMakeLists.txt
tests/data/: st.msa
tests/data/gemxfmt/: GEMXFMT.PRG  XFMT.RSC
tests/headers/: CMakeLists.txt  test_gem_header.c
tests/vdi/: CMakeLists.txt  test_vdi.c  vdi_optimized.c  vdi_reference.c  vdi_test.h  vdi_test_host.c
tools/: gdb-no-debuginfod.sh  gemix-session.sh  package-gemix.cmake  start-gemd.sh  start-rasta.sh
tools/fat12/: CMakeLists.txt  fat12.c
tools/msa/: CMakeLists.txt  cli.c
tools/resgen/: CMakeLists.txt  resgen.c
tools/stout/: CMakeLists.txt  main.c
